Fix contrast for accessibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,21 +9,22 @@ body {
   background-repeat: no-repeat;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  color: #27d8d8;
-  background: #2d2b30;
+  color: #222;
+  /*background: #2d2b30;*/
+  background: #999;
 }
 
 /* tour table */
 table {
-  background: rgba(0,0,0,.2);
+  background: rgba(0,0,0,.75);
   text-align: center;
   border-spacing: 0;
 }
 table tr:first-child {
-  background: rgba(0,0,0,.5);
+  background: rgba(0,0,0,.75);
 }
 table tr:nth-child(2n+3) {
-  background: rgba(0,0,0,.2);
+  background: rgba(0,0,0,.5);
 }
 table td,
 table th {
@@ -80,7 +81,7 @@ a {
 a,
 .nav a {
   transition: all .5s;
-  color: #29a746;
+  color: #12323f;
 }
 
 a:hover,
@@ -92,7 +93,7 @@ a:hover,
 
 .main-nav {
   width: 100%;
-  background: rgba(45, 43, 48, 0.8);
+  background: rgba(200, 200, 200, 0.8);
   min-height: 30px;
   padding: 10px;
   position: fixed;
@@ -122,7 +123,7 @@ a:hover,
 header {
   text-align: center;
   overflow: hidden;
-  padding-top: 60px;
+  padding-top: 57px;
   height: 350px;
   text-transform: uppercase;
 
@@ -206,7 +207,7 @@ header .name{
 .heading{
   font-size: 2em;
   text-transform: uppercase;
-  color: #ddd;
+  color: #000;
   margin-top: 10px;
 }
 
@@ -241,18 +242,6 @@ a.social {
   background-size: 30px 30px;
   opacity: .4;
   transition: all .5s;
-}
-
-a.twitter {
-  background-image: url(../img/twitter-32.png);
-}
-
-a.youtube {
-  background-image: url(../img/youtube-32.png);
-}
-
-a.spotify {
-  background-image: url(../img/spotify-32.png);
 }
 
 a.social:hover {
